--- a/.github/workflows/avito.yml
+++ b/.github/workflows/avito.yml
@@ -25,3 +25,11 @@ jobs:
           CHAT_ID: ${{ secrets.CHAT_ID }}
           SEARCH_URL: ${{ secrets.SEARCH_URL }}
         run: python main.py
+
+      - name: Commit updated seen_links
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add seen_links.txt
+          git commit -m "Update seen links" || echo "No changes to commit"
+          git push
