--- a/.github/workflows/avito.yml
+++ b/.github/workflows/avito.yml
@@ -5,6 +5,10 @@ on:
     - cron: "*/10 * * * *"
   workflow_dispatch:
 
+
+permissions:
+  contents: write
+  
 jobs:
   run-script:
     runs-on: ubuntu-latest
